# pipa

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/systemd/: pipa-publisher.service  pipa.service
scripts/: smoke-local.sh
site/: index.html  styles.css
src/: app.rs  cli.rs  dns.rs  host_key.rs  lib.rs  main.rs  messages.rs  registry.rs  ssh.rs  tests.rs  util.rs
