[package]
name = "pipa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "=4.5.31", features = ["derive", "env"] }
rand_core = "0.6"
russh = "0.59.0"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
